Completing Banner area

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <div class="left-half">
         <h1 class="welcome">Welcome</h1>
         <h1>To The World Of </h1>
-        <h1 class="name-banner">Jahedul Hoque</h1>
+        <h1 class="name-banner"> Jahedul Hoque</h1>
+        <h3>Professional Web Developer</h3>
         <p class="para">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero enim pariatur architecto sint qui vitae laboriosam in ea voluptate sunt! Expedita adipisci quisquam libero est deleniti sequi velit nisi commodi.
         </p>
+        <a href="https://www.linkedin.com/in/md-jahedul-hoque/" target="_blank" class="link-button">HIRE ME</a>
     </div>
     <div class="right-half">
     <img src="./images/image 10.png" alt="bannerImg">
