--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Start Dream Area -->
     <section class="dream-area">
         <div class="half">
-            <img src="./images/image 10.png" alt="">
+            <img src="./images/image 13.png" alt="">
         </div>
         <div class="half">
             <h1>My Dream</h1>
@@ -67,7 +67,7 @@
             <h2>Programming hero learner</h2>
             <h4 class="orange-highlight">2020 to present| Programming hero learner</h4>
             <p class="para">
-                I am learning web developing from Programming Hero team with full care. Here the course instructor Jhankar Mahbub vai teach web developing. He is a very good instructor. Here I am healing my weakness in Javascript and React. I am really glad to be here. websites, apps and platforms fueling competitive advantage and revenue growth. websites, apps and platforms fueling competitive advantage and revenue growth.
+                I am learning web developing from Programming Hero team with full care. Here the course instructor Jhankar Mahbub vai teach web developing. He is a very good instructor. Here I am healing my weakness in Javascript and React. I am really glad to be here. websites, apps and platforms fueling competitive advantage and revenue growth. websites, apps and platforms.
             </p>
         </div>
     </div>
